--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -927,3 +927,36 @@
   year={2005},
   publisher={Elsevier}
 }
+
+@article{zaghloul2010functional,
+  title={Functional modules, mutational load and human genetic disease},
+  author={Zaghloul, Norann A and Katsanis, Nicholas},
+  journal={Trends in genetics},
+  volume={26},
+  number={4},
+  pages={168--176},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{he2007exo70,
+  title={Exo70 interacts with phospholipids and mediates the targeting of the exocyst to the plasma membrane},
+  author={He, Bing and Xi, Fengong and Zhang, Xiaoyu and Zhang, Jian and Guo, Wei},
+  journal={The EMBO journal},
+  volume={26},
+  number={18},
+  pages={4053--4065},
+  year={2007},
+  publisher={EMBO Press}
+}
+
+@article{zhang2008membrane,
+  title={Membrane association and functional regulation of Sec3 by phospholipids and Cdc42},
+  author={Zhang, Xiaoyu and Orlando, Kelly and He, Bing and Xi, Fengong and Zhang, Jian and Zajac, Allison and Guo, Wei},
+  journal={The Journal of cell biology},
+  volume={180},
+  number={1},
+  pages={145--158},
+  year={2008},
+  publisher={Rockefeller University Press}
+}
