--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -93,11 +93,11 @@ studies ranging from single gene analysis to proteomics,
 processes underlying TZ maturation are not as well-studied.
 
 In the Drosophila male germline, nascent TZs first assemble on basal bodies
-during early pre-meiotic G2 phase (spermatocytes), anchor directly to the plasma membrane.
-This is followed by establishment of cilium-membrane connections and a
-ciliary membrane that persists during meiosis \citep{riparbelli2012assembly}
+during early G2 phase in spermatocytes and anchor directly to the plasma membrane.
+This is followed by establishment of cilium-membrane connections
 through a poorly understood mechanism
-involving microtubule rearrangements \citep{gottardo2013cilium}.
+involving microtubule rearrangements \citep{gottardo2013cilium} and a
+ciliary membrane that persists through meiosis \citep{riparbelli2012assembly}.
 Ciliogenesis begins with the assembly of TZ proteins at the tips of
 the nascent basal body.
 This is followed by the anchoring of the TZ to the membrane and
@@ -273,13 +273,14 @@ can cause genetic disorders which display severity ranging from congenital
 lethality to adult onset.
 A large number of ciliopathies are associated with genes that encode for
 proteins that function at the cilium transition zone (TZ).
-Often, a single gene is linked to multiple ciliopathies with variable phenotypes
+Often, a single gene is linked to multiple ciliopathies with distinct phenotypes
 and severities.
-For example, the conserved TZ protein CEP290 is linked to at least six different
-cilium-associated disorders, suggesting that many of these encode for mutant proteins
-that are hypomorphic in nature whose function may
-be affected by modifier mutations and genetic environment.
-Animal models with mild perturbations of TZ function may therefore provide
+For example, \textit{CEP290} is linked to at least six different
+cilium-associated disorders.
+It is likely that these mutations do not completely abolish CEP290
+function, and may be affected by genetic modifiers in an affected individual
+\citep{zaghloul2010functional}.
+Animal models with partial loss of TZ function may therefore provide
 insight on intermediate phenotypes associated with human disease.
 Here, we found that reduced levels of the membrane lipid \PIP{},
 which is known to be enriched at the base of cilia,
@@ -304,15 +305,13 @@ manner.
 We also found that cells mutant for \textit{sktl} contained hyperelongated
 TZs similar to SigD-expressing cells.
 Sktl also localizes to centrioles,
-and our results suggest that Skittles act locally at cilia to
+and our results suggest that Skittles acts locally at cilia to
 regulate TZ length.
-The protein CEP135, human ortholog of the Drosophila protein
-Asterless, has been show to bind PIPKI$\gamma$ in cell lines.
 PIPKI$\gamma$ is linked to lethal congenital contractural syndrome
 type 3 (LCCS3).
 It has previously been suggested that LCCS3 might represent a ciliopathy.
-PIPKI$\gamma$ is linked to LCCS3 with many features reminiscent
-of ciliopathies, such as micrognathia, and a role for the LCCS1 protein
+PIPKI$\gamma$ is linked to LCCS3 with features reminiscent
+of ciliopathies such as micrognathia, and a role for the LCCS1 protein
 Gle3 in cilia.
 In addition, all three human PIPKI isoforms are highly expressed in testes
 and PIPKI$\alpha$ and PIPKI$\beta$ are important for fertility in mice
@@ -321,15 +320,16 @@ and PIPKI$\alpha$ and PIPKI$\beta$ are important for fertility in mice
 Members of the exocyst complex, such as Sec10 and Sec6, have been shown
 to be important for cilium formation in cultured cell lines and zebrafish
 \citep{zuo2009exocyst, lobo2017exocyst, seixas2016arl13b}.
-The exocyst is known to bind to \PIP{}, and we previously described that
+The exocyst is known to bind to \PIP{}
+\citep{he2007exo70, zhang2008membrane}, and we previously described that
 the \textit{onr} allele of Drosophila \textit{Exo84} phenocopied
-male germline defects observed in \sigd{}.
+male germline defects observed in \sigd{} \citep{fabian2010phosphatidylinositol}.
 In this paper, we show that the \textit{onr} allele of the Drosophila Exo84
 phenocopies the loss of cilium-membrane contacts in \sigd{},
 but not TZ hyperelongation.
 Proper TZ function is required for membrane tethering, as \textit{dila; cby}
 mutants, which contain abnormal TZs also show cytoplasmic cilia similar to
-\sigd{}.
+\sigd{} \citep{vieillard2016transition}.
 Our results suggest that the exocyst is required after the initial stages
 of TZ assembly and maturation for TZ function.
 
