--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -240,7 +240,7 @@ ring of centrioles ($p$ <0.01).
 A heterozygous mutation in the human \textit{EXOC8},
 the human ortholog of yeast Exo84, is linked to
 Joubert syndrome \citep{dixon2012exome}.
-EXOC8, the human ortholog of Exo84, is a component of the octameric exocyst complex, which binds
+Exo84 is a component of the octameric exocyst complex, which binds
 \PIP{} and regulates membrane trafficking at the plasma membrane.
 We previously showed that male flies homozygous for the \textit{onion rings}
 (\textit{onr}) mutant of Drosophila Exo84 were sterile, with phenotypes
@@ -503,7 +503,7 @@ Abbreviations: Cele (\textit{Caenorhabditis elegans}), Spur (\textit{Strongyloce
 %\begin{figure}[ht]
 %  \includegraphics[scale=0.9]{figure-3/figure2.png}
 %\end{figure}
-%\newpage
+\newpage
 
 
 %%%
