--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -960,3 +960,14 @@
   year={2008},
   publisher={Rockefeller University Press}
 }
+
+@article{szymanska2012transition,
+  title={The transition zone: an essential functional compartment of cilia},
+  author={Szymanska, Katarzyna and Johnson, Colin A},
+  journal={Cilia},
+  volume={1},
+  number={1},
+  pages={10},
+  year={2012},
+  publisher={BioMed Central}
+}
