--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -71,9 +71,9 @@ Cilia are sensory organelles present on almost all cells in the human body
 They function primarily by providing sensory inputs to cells, but can
 also function as motile propellers in certain cells
 \citep{bloodgood2010sensory}.
-Consistent with their pervasiveness and importance in cell signalling,
-defects in cilium formation are associated with various genetic disorders
-known collectively as ciliopathies, which can 
+Consistent with their importance in cell signalling,
+defects in cilium formation are associated with genetic disorders
+known collectively as ciliopathies, which can display
 neurological defects \citep{valente2014primary},
 skeletal abnormalities \citep{hammarsjo2017novel, waters2011ciliopathies},
 and infertility \citep{inaba2016sperm} in addition to other phenotypes.
@@ -82,11 +82,12 @@ A large number of ciliopathies are linked to mutations in proteins that
 localize to the cilium transition zone (referred to herein as TZ).
 The TZ is the proximal-most region of the cilium and
 acts as a diffusion barrier that regulates the
-bi-directional transport of protein and lipid cargo at the base of the cilium.
+bi-directional transport of protein and lipid cargo at the base of the cilium
+\citep{reiter2012base, szymanska2012transition}.
 The TZ is essential for cilium formation (ciliogenesis) and cilium-associated
 signalling.
 The conserved TZ protein CEP290, for example, is mutated in at least
-five different ciliopathies, and is essential for cilium formation in both humans
+six different ciliopathies, and is essential for cilium formation in both humans
 and Drosophila \citep{basiri2014migrating}.
 Although the protein composition of TZs has been investigated in various
 studies ranging from single gene analysis to proteomics,
@@ -108,16 +109,22 @@ TZ maturation has been described in
 \textit{Caenorrhabditis elegans} \citep{serwas2017centrioles} and
 \textit{Drosophila melanogaster} \citep{gottardo2013cilium}
 and is most readily observed by an increase in TZ length from nascent to mature.
-Possibly, this is similar to the initial steps of TZ assembly and reorganization
-in well-studied vertebrate cilia.
+This are probably similar to the initial steps of TZ assembly and reorganization
+in vertebrates.
 
 Here, we show that the lipid phosphatidylinositol 4,5-bisphosphate (\PIP{})
 is essential for proper TZ maturation in developing male germ cells in \textit{D. melanogaster}.
-Reduction of cellular \PIP{} by expression of the bacterial PIP phosphatase SigD
+\PIP{} is a membrane lipid and one of seven phosphoinositides (PIPs)
+present in eukaryotic cells.
+It is primarily enriched at the plasma membrane and the base of cilia,
+but its functions in ciliogenesis have not been studied.
+We found that reduction of cellular \PIP{}
+by expression of the bacterial PIP phosphatase SigD
 or by inactivation of the PIP 5-kinase Skittles (Sktl) that localizes to cilia
 induces longer than normal TZs without affecting TZ assembly.
 These hyperelongated TZs show hallmarks of aberrant function similar to those
-found in previously studied TZ mutants, including loss of cilium-membrane associations.
+found in previously studied TZ mutants,
+including loss of cilium-membrane associations.
 We also find that the \textit{onion rings} allele of the
 ciliopathy-associated \textit{EXOC8} gene encoding the human Exo84
 decouples TZ hyperelongation from loss of cilium-membrane contacts.
@@ -196,7 +203,7 @@ and we found its localization to be unaffected in \sigd{} (supplementary figure 
 \subsection{Hyperelongated transition zones show signs of functional defects}
 While shorter spermatocyte TZs have been reported in mutants of TZ proteins in Drosophila
 \citep{vieillard2016transition, pratt2016drosophila},
-no genetic manipulation has been reported to induce hyperelongated TZs. 
+no genetic manipulation has been reported to induce hyperelongated TZs.
 We sought to examine whether TZ hyperelongation due to SigD expression
 affected TZ function.
 During germ cell elongation following meiosis, the TZ detaches from
@@ -269,8 +276,9 @@ membrane-cilium association are genetically separable phenotypes.
 
 \section{Discussion}
 Cilia are essential for proper human development, and their disruption
-can cause genetic disorders which display severity ranging from congenital
-lethality to adult onset.
+can cause genetic disorders with severities ranging from congenital-
+lethal \citep{}
+to late onset \citep{}.
 A large number of ciliopathies are associated with genes that encode for
 proteins that function at the cilium transition zone (TZ).
 Often, a single gene is linked to multiple ciliopathies with distinct phenotypes
@@ -356,8 +364,8 @@ A. Guichet \citep{gervais2008pip5k}.
 
 \subsection{Antibodies}
 The following primary antibodies were used for immunofluorescence
-at the indicated concentrations - 
-rabbit anti-Tulp (gift from W. McGinnis \citep{ronshaugen2002structure}), 1:500; 
+at the indicated concentrations -
+rabbit anti-Tulp (gift from W. McGinnis \citep{ronshaugen2002structure}), 1:500;
 chicken anti-GFP IgY (abcam) 1:1000;
 rat anti-RFP IgG (5F8, ChromoTek), 1:1000;
 rabbit anti-Sktl (courtesy of P. Raghu), 1:500;
@@ -454,10 +462,10 @@ This work was supported by a grant from the Canadian Institute for Health Resear
 %%
 %    FIGURE 1
 %
-\textbf{Figure 1. SigD expression induces transition zone hyperelongation.} 
+\textbf{Figure 1. SigD expression induces transition zone hyperelongation.}
 \begin{enumerate}[label={(\Alph*)}, nolistsep]
-\item \sigd{} expression induces Cep290 hyperelongation in mature (late G2 phase) cilia.  
-\item Paired Ana1-Cep290 lengths in nascent and mature cilia ($n$ \textgreater 30). 
+\item \sigd{} expression induces Cep290 hyperelongation in mature (late G2 phase) cilia.
+\item Paired Ana1-Cep290 lengths in nascent and mature cilia ($n$ \textgreater 30).
 \item \sigd{} expression induces hyperelongation of other TZ markers, such as Cby, Mks
   and acetylated tubulin.
 \item TZ hyperelongation persists through meiosis but does not affect
@@ -473,11 +481,12 @@ This work was supported by a grant from the Canadian Institute for Health Resear
 %%
 %    FIGURE 2
 %
-\textbf{Figure 2. Sktl is important for transition zone maturation and localizes to basal bodies.} 
+\textbf{Figure 2. Sktl is important for transition zone maturation and localizes to basal bodies.}
 \begin{enumerate}[label={(\Alph*)}, nolistsep]
 \item Expression of full-length Sktl suppresses \sigd{}-induced TZ hyperelongation.
 \item Quantification of Cep290 and Ana1 lengths from control, \sigd{} and Sktl; \sigd{} ($n$\textgreater 60) from (A).
-\item \textit{sktl}$^{2.3}$ clones exhibit TZ hyperelongation.
+\item \textit{sktl}$^{2.3}$ clones exhibit TZ hyperelongation. Cilia are marked using
+  Unc-GFP.
 \item Phylogenetic tree of PIP5Ks showing conservation of cilium-associated functions.
   The scale bar represents expected amino acid substitutions per site and branch support values are shown in red (a value of 1 indicates maximum support).
 Abbreviations: Cele (\textit{Caenorhabditis elegans}), Spur (\textit{Strongylocentrotus purpuratus}), Amel (\textit{Apis mellifera}), Aaeg (\textit{Aedes aegypti}), Dana (\textit{Drosophila ananassae}), Dmel (\textit{Drosophila melanogaster}), Hsap (\textit{Homo sapiens}), Mmus (\textit{Mus musculus}), Xtro (\textit{Xenopus tropicalis}), Cint (\textit{Ciona intestinalis}), Scer (\textit{Saccharomyces cerevisiae}).
@@ -495,9 +504,9 @@ Abbreviations: Cele (\textit{Caenorhabditis elegans}), Spur (\textit{Strongyloce
 \textbf{Figure 3. Hyperelongated transition zones display functional defects.}
 \begin{enumerate}[label={(\Alph*)}, nolistsep]
 \item
-\item 
-\item 
-\item 
+\item
+\item
+\item
 \end{enumerate}
 
 %\begin{figure}[ht]
