--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -284,7 +284,7 @@ proteins that function at the cilium transition zone (TZ).
 Often, a single gene is linked to multiple ciliopathies with distinct phenotypes
 and severities.
 For example, \textit{CEP290} is linked to at least six different
-cilium-associated disorders.
+cilium-associated human disorders.
 It is likely that these mutations do not completely abolish CEP290
 function, and may be affected by genetic modifiers in an affected individual
 \citep{zaghloul2010functional}.
@@ -307,7 +307,7 @@ It causes excessive lengthening of the TZ,
 and disrupts membrane-cilium connections.
 Thus, intermediate steps during TZ maturation require \PIP{}.
 
-The type I phosphatidylinositol 4-phosphate kinase (PIPKI) Skittles
+We found that the type I phosphatidylinositol 4-phosphate kinase (PIPKI) Skittles
 suppresses TZ elongation in \sigd{} cells in a cilium-autonomous
 manner.
 We also found that cells mutant for \textit{sktl} contained hyperelongated
@@ -509,9 +509,9 @@ Abbreviations: Cele (\textit{Caenorhabditis elegans}), Spur (\textit{Strongyloce
 \item
 \end{enumerate}
 
-%\begin{figure}[ht]
-%  \includegraphics[scale=0.9]{figure-3/figure2.png}
-%\end{figure}
+\begin{figure}[ht]
+  \includegraphics[scale=0.8]{figure-3/figure3.png}
+\end{figure}
 \newpage
 
 
@@ -525,10 +525,10 @@ Abbreviations: Cele (\textit{Caenorhabditis elegans}), Spur (\textit{Strongyloce
 \item Cells mutant for \textit{onr} display loss of plasma membrane tethering.
 \end{enumerate}
 
-%\begin{figure}[ht]
-%  \includegraphics[scale=0.9]{figure-4/figure2.png}
-%\end{figure}
-%\newpage
+\begin{figure}[ht]
+  \includegraphics[scale=0.9]{figure-4/figure4.png}
+\end{figure}
+\newpage
 
 
 \end{document}
