--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -971,3 +971,11 @@
   year={2012},
   publisher={BioMed Central}
 }
+@Manual{r,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2013},
+  url = {http://www.R-project.org/},
+}
