Added new entries

--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -971,6 +971,7 @@
   year={2012},
   publisher={BioMed Central}
 }
+
 @Manual{r,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
@@ -978,4 +979,60 @@
   address = {Vienna, Austria},
   year = {2013},
   url = {http://www.R-project.org/},
+}
+
+@article{cenci1994chromatin,
+  title={Chromatin and microtubule organization during premeiotic, meiotic and early postmeiotic stages of Drosophila melanogaster spermatogenesis},
+  author={Cenci, Giovanni and Bonaccorsi, Silvia and Pisano, Claudio and Verni, Fiammetta and Gatti, Maurizio},
+  journal={Journal of Cell Science},
+  volume={107},
+  number={12},
+  pages={3521--3534},
+  year={1994},
+  publisher={The Company of Biologists Ltd}
+}
+
+
+@article{khanna2009common,
+  title={A common allele in RPGRIP1L is a modifier of retinal degeneration in ciliopathies},
+  author={Khanna, Hemant and Davis, Erica E and Murga-Zamalloa, Carlos A and Estrada-Cuzcano, Alejandro and Lopez, Irma and den Hollander, Anneke I and Zonneveld, Marijke N and Othman, Mohammad I and Waseem, Naushin and Chakarova, Christina F and others},
+  journal={Nature genetics},
+  volume={41},
+  number={6},
+  pages={739},
+  year={2009},
+  publisher={Nature Publishing Group}
+}
+
+@article{leitch2008hypomorphic,
+  title={Hypomorphic mutations in syndromic encephalocele genes are associated with Bardet-Biedl syndrome},
+  author={Leitch, Carmen C and Zaghloul, Norann A and Davis, Erica E and Stoetzel, Corinne and Diaz-Font, Anna and Rix, Suzanne and Alfadhel, Majid and Lewis, Richard Alan and Eyaid, Wafaa and Banin, Eyal and others},
+  journal={Nature genetics},
+  volume={40},
+  number={4},
+  pages={443},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
+@article{shimada2017vitro,
+  title={In vitro modeling using ciliopathy-patient-derived cells reveals distinct cilia dysfunctions caused by CEP290 mutations},
+  author={Shimada, Hiroko and Lu, Quanlong and Insinna-Kettenhofen, Christine and Nagashima, Kunio and English, Milton A and Semler, Elizabeth M and Mahgerefteh, Jacklyn and Cideciyan, Artur V and Li, Tiansen and Brooks, Brian P and others},
+  journal={Cell reports},
+  volume={20},
+  number={2},
+  pages={384--396},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{stowe2012centriolar,
+  title={The centriolar satellite proteins Cep72 and Cep290 interact and are required for recruitment of BBS proteins to the cilium},
+  author={Stowe, Timothy R and Wilkinson, Christopher J and Iqbal, Anila and Stearns, Tim},
+  journal={Molecular biology of the cell},
+  volume={23},
+  number={17},
+  pages={3322--3335},
+  year={2012},
+  publisher={Am Soc Cell Biol}
 }
